# RNN_EI_Network

./: .gitignore  pyproject.toml  setup.py
experiments/: __init__.py  cli.py  main.py  neurogym_rnn_train.py
experiments/batch_run/: batch_run.sh  generate_random_params.py
experiments/fmnist/: main.py
experiments/fmnist/batch_run/: random_configs.json
experiments/fmnist/batch_run/sbatch_err/: random_config_9224595_0.err  random_config_9224595_1.err  random_config_9224595_10.err  random_config_9224595_11.err  random_config_9224595_12.err  random_config_9224595_14.err  random_config_9224595_15.err  random_config_9224595_16.err  random_config_9224595_17.err  random_config_9224595_18.err  random_config_9224595_19.err  random_config_9224595_2.err  random_config_9224595_3.err  random_config_9224595_4.err  random_config_9224595_5.err  random_config_9224595_6.err  random_config_9224595_9.err  random_config_9225276_0.err  random_config_9225276_1.err  random_config_9225276_10.err  random_config_9225276_11.err  random_config_9225276_12.err  random_config_9225276_13.err  random_config_9225276_14.err  random_config_9225276_15.err  random_config_9225276_16.err  random_config_9225276_17.err  (+10 more)
experiments/mnist/: __init__.py  cli.py  main.py  model.py  training.py
experiments/neurogym/: __init__.py  cli.py  main.py  training.py
experiments/neurogym/batch_run/: batch_run.sh  generate_configs.py  random_configs.json
inhibition/: __init__.py  data.py  dense.py  init.py  model.py  normalization.py  rnn.py
test/: dense_test.py  model_test.py  rnn_test.py
(+518 files in other folders)
