[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rnn-ei-network"
version = "0.1.0"
description = "Excitatory–inhibitory normalization layers and experiments"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "torch",
    "torchvision",
    "wandb",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["inhibition*", "experiments*"]
